# -The-offecial-GROMACS-molecular-simulation-toolkit.

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  COPYING  cmake-format.conf  debug.txt  repro.sh
admin/: clang-format.sh  clang-tidy.sh  copyright.sh  lsan-suppressions.txt  make-release-build.py
admin/ci-scripts/: complexity.py  gromacs-base-build.sh  gromacs-base-configure.sh  gromacs-base-cuda-sanitizer-test.sh  gromacs-base-test.sh  gromacs-bootstrap-macos.sh  gromacs-cp2k-configure.sh
admin/containers/: buildall.sh  oneapi-for-amd-gpus-2023.1.0-rocm-5.4.3-linux.sh  utility.py  (+1 more)
api/: CMakeLists.txt
cmake/: FindHWLOC.cmake  FindHip.cmake  FindHiprtc.cmake  FindLibStdCpp.cmake  FindcuFFTMp.cmake  TestSchedAffinity.cmake  gmxBuildTypeASAN.cmake  gmxBuildTypeMSAN.cmake  gmxBuildTypeProfile.cmake  gmxBuildTypeReference.cmake  gmxBuildTypeReleaseWithAssert.cmake  gmxBuildTypeTSAN.cmake  gmxBuildTypeUBSAN.cmake  gmxCFlags.cmake  gmxDetectAvx512FmaUnits.cmake  gmxDetectCpu.cmake  gmxDetectSimd.cmake  gmxFindFlagsForSource.cmake  gmxManageCcache.cmake  gmxManageClangCudaConfig.cmake  gmxManageColvars.cmake  gmxManageCuda.cmake  gmxManageFmt.cmake  gmxManageMPI.cmake  gmxManageMuparser.cmake  gmxManageNvccConfig.cmake  gmxManageNvshmem.cmake  gmxManageOpenCL.cmake  gmxManageOpenMP.cmake  gmxManageSYCL.cmake  gmxManageSharedLibraries.cmake  gmxManageSimd.cmake  gmxManageSycl.cmake  gmxManageSyclHipSycl.cmake  gmxManageSyclOneApi.cmake  gmxManageTNG.cmake  gmxManageVkFft.cmake  gmxSimdFlags.cmake  gmxTestCompilerProblems.cmake  gmxTestIntelLLVM.cmake  (+2 more)
docs/: CMakeLists.txt  conf.cmakein.py  index.rst
scripts/: CMakeLists.txt
share/: CMakeLists.txt
src/: CMakeLists.txt  buildinfo.h.cmakein  config.h.cmakein
src/gromacs/applied_forces/qmmm/: CMakeLists.txt  qmmm.cpp  qmmmcheckpointdata.cpp  qmmmcheckpointdata.h  qmmmforceprovider.cpp  qmmmforceprovider.h  qmmmforceprovider_stub.cpp  qmmminputgenerator.cpp  qmmmoptions.cpp  qmmmtopologypreprocessor.cpp
src/gromacs/applied_forces/qmmm/tests/: CMakeLists.txt  qmmm.cpp  qmmmcheckpointdata.cpp  qmmmforceprovider.cpp  qmmminputgenerator.cpp  qmmmoptions.cpp  qmmmtopologypreprocessor.cpp
src/gromacs/device_info/: CMakeLists.txt  device_management.cpp  device_management.cu  device_management_common.cpp  device_management_ocl.cpp  device_management_sycl.cpp  device_management_sycl_intel_device_ids.cpp
src/gromacs/fft/: CMakeLists.txt  calcgrid.cpp  fft.cpp  fft5d.cpp  fft_fftw3.cpp  fft_mkl.cpp  gpu_3dfft.cpp  gpu_3dfft.h  gpu_3dfft_cufft.cu  gpu_3dfft_cufft.h  gpu_3dfft_cufftmp.cpp  gpu_3dfft_cufftmp.h  gpu_3dfft_heffte.cpp  gpu_3dfft_heffte.h  gpu_3dfft_impl.cpp  gpu_3dfft_impl.h  gpu_3dfft_ocl.cpp  gpu_3dfft_ocl.h  gpu_3dfft_ocl_vkfft.cpp  gpu_3dfft_support.cpp  gpu_3dfft_support.h  gpu_3dfft_sycl.h  gpu_3dfft_sycl_bbfft.cpp  gpu_3dfft_sycl_bbfft.h  gpu_3dfft_sycl_mkl.cpp  gpu_3dfft_sycl_mkl.h  gpu_3dfft_sycl_rocfft.cpp  gpu_3dfft_sycl_rocfft.h  gpu_3dfft_sycl_vkfft.cpp  gpu_3dfft_sycl_vkfft.h  parallel_3dfft.cpp
src/gromacs/fft/include/gromacs/fft/: gpu_3dfft_heffte.h
src/gromacs/fft/tests/: CMakeLists.txt  clfftinitializer.cpp  fft.cpp  fft_mpi.cpp
src/gromacs/fft/tests/refdata/: ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_4_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_4_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_4_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_4_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_5_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_5_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_5_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_5_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_6_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_6_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_6_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_6_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_7_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_7_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_7_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_4_7_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_4_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_4_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_4_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_4_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_5_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_5_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_5_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_5_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_6_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_6_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_6_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_6_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_7_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_7_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_7_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_5_7_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_6_4_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_6_4_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_6_4_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_6_4_7.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_6_5_4.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_6_5_5.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_6_5_6.xml  ScanWorks_ParameterizedFFTTest3D_RunsOnDevices_6_5_7.xml  (+33 more)
src/gromacs/hardware/: CMakeLists.txt  cpuinfo.cpp  detecthardware.cpp  device_information.h  device_management.cpp  device_management.cu  device_management.h  device_management_common.cpp  device_management_ocl.cpp  device_management_sycl.cpp  device_management_sycl_intel_device_ids.cpp  hardwaretopology.cpp  identifyavx512fmaunits.cpp  printhardware.cpp  simd_support.cpp  simd_support.h
src/gromacs/hardware/include/gromacs/hardware/: device_management.h  hw_info.h
src/gromacs/hardware/tests/: CMakeLists.txt  device_management.cpp
tests/: CMakeLists.txt
(+2922 files in other folders)
